Fix docker service