@@ -1,17 +1,12 @@
 package com.tombspawn
 
-import com.github.dockerjava.api.model.Bind
-import com.github.dockerjava.api.model.ExposedPort
-import com.github.dockerjava.api.model.Ports
-import com.github.dockerjava.api.model.Volume
 import com.google.gson.Gson
 import com.google.gson.JsonParser
 import com.tombspawn.data.Api
 import com.tombspawn.data.DatabaseService
 import com.tombspawn.data.Refs
 import com.tombspawn.data.Subscriptions
-import com.tombspawn.git.CredentialProvider
-import com.tombspawn.models.AppContainerRequest
+import com.tombspawn.docker.DockerService
 import com.tombspawn.models.Reference
 import com.tombspawn.models.RequestData
 import com.tombspawn.models.config.App
@@ -22,30 +17,37 @@ import com.tombspawn.models.github.RefType
 import com.tombspawn.models.slack.Event
 import com.tombspawn.models.slack.SlackEvent
 import com.tombspawn.models.slack.SlackMessage
-import com.tombspawn.network.docker.DockerApiClient
 import com.tombspawn.slackbot.*
 import com.tombspawn.utils.Constants
 import kotlinx.coroutines.Dispatchers
 import kotlinx.coroutines.coroutineScope
+import kotlinx.coroutines.delay
 import kotlinx.coroutines.launch
 import org.slf4j.LoggerFactory
-import java.io.File
 import java.util.*
 import javax.inject.Inject
 
 class ApplicationService @Inject constructor(
-    private val slack: Slack, private val common: Common, private val credentialProvider: CredentialProvider,
-    private val dockerClient: DockerApiClient, private val gson: Gson, private val databaseService: DatabaseService,
-    private val slackClient: SlackClient, private val apps: List<App>
+    private val slack: Slack,
+    private val common: Common,
+    private val gson: Gson,
+    private val databaseService: DatabaseService,
+    private val slackClient: SlackClient,
+    private val apps: List<App>,
+    private val dockerService: DockerService
 ) {
 
-    suspend fun init() {
+    suspend fun init() = coroutineScope {
         addApps()
         fetchBotInfo()
         apps.forEachIndexed { index, app ->
-            createContainer(app, common.basePort + index)
-            fetchFlavours(app)
-            fetchReferences(app)
+            dockerService.createContainer(app, common.basePort + index)
+            launch(Dispatchers.IO) {
+                // Add app start delay
+                delay(30000)
+                fetchFlavours(app)
+                fetchReferences(app)
+            }
         }
         addVerbs()
         updateUserData()
@@ -61,67 +63,14 @@ class ApplicationService @Inject constructor(
         return databaseService.addApps(apps)
     }
 
-    private suspend fun createContainer(app: App, port: Int) =
-        coroutineScope {
-            dockerClient.createImage(File("/Users/aman/git/ramukaka/skeleton/DockerFile"), "skeleton")
-            val networkId = dockerClient.createNetwork("tombspawn")
-            val gradle = dockerClient.createVolume("gradle")
-            val android = dockerClient.createVolume("android")
-            val gradleBind = Bind(gradle, Volume("/home/skeleton/.gradle/"))
-            val androidBind = Bind(android, Volume("/home/skeleton/.android/"))
-            val gitApps = dockerClient.createVolume("git")
-            val appVolumeBind = Bind(gitApps, Volume("/app/git/"))
-
-            launch(Dispatchers.IO) {
-                dockerClient.logEvents()
-                println("Finished events")
-            }
-
-            val appPath = "/app/git/${app.id}/"
-            app.dir = appPath
-
-            val request =
-                gson.toJson(AppContainerRequest(app, common, credentialProvider), AppContainerRequest::class.java)
-
-            val exposedPort = ExposedPort.tcp(8080)
-            val portBindings = Ports()
-            portBindings.bind(exposedPort, Ports.Binding.bindPort(port))
-            dockerClient.createContainer(
-                "skeleton",
-                app.id, listOf(
-                    "java",
-                    "-server",
-                    "-XX:+UnlockExperimentalVMOptions",
-                    "-XX:+UseCGroupMemoryLimitForHeap",
-                    "-XX:InitialRAMFraction=2",
-                    "-XX:MinRAMFraction=2",
-                    "-XX:MaxRAMFraction=2",
-                    "-XX:+UseG1GC",
-                    "-XX:MaxGCPauseMillis=100",
-                    "-XX:+UseStringDeduplication",
-                    "-jar",
-                    "application.jar",
-                    request,
-                    "--verbose"
-                ), null, listOf(gradleBind, androidBind, appVolumeBind),
-                portBindings, listOf(exposedPort)
-            )?.let { containerId ->
-                dockerClient.logContainerCommand(app.id, containerId)
-                dockerClient.attachNetwork(containerId, networkId)
-                dockerClient.startContainer(containerId)
-            }
-            LoggerFactory.getLogger("Container").debug("Created ${app.name}")
-            Unit
-        }
-
     private suspend fun fetchReferences(app: App) {
-        dockerClient.fetchReferences(app)?.let {
+        dockerService.fetchReferences(app)?.let {
             databaseService.addRefs(it, app.id)
         }
     }
 
     private suspend fun fetchFlavours(app: App) {
-        dockerClient.fetchFlavours(app)?.let {
+        dockerService.fetchFlavours(app)?.let {
             databaseService.addFlavours(it, app.id)
         }
     }
